kubernetes/apps/downloads/qbittorrent/ingress/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorrent-ingress
  annotations:
    kubernetes.io/ingress.class: traefik-internal
    external-dns.alpha.kubernetes.io/target: default.internal.javiersant.com
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://qbittorrent.default.internal.javiersant.com"
    gethomepage.dev/description: Torrent Client
    gethomepage.dev/group: Downloads
    gethomepage.dev/icon: qbittorrent.svg
    gethomepage.dev/name: Torrent Client
    gethomepage.dev/widget.type: qbittorrent
    gethomepage.dev/widget.url: "http://qbittorrent.downloads.svc.cluster.local:8080"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`qbittorrent.default.internal.javiersant.com`)
      kind: Rule
      services:
        - kind: Service
          name: qbittorrent
          port: 8080
  tls:
    secretName: wildcard-javiersant-com-tls
